<?xml version="1.0"?>
<package>
  <name>jackal_tools</name>
  <version>0.0.0</version>
  <description>The jackal_tools package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>face_recognition_tc</build_depend>
  <build_depend>person_sim</build_depend>
  <build_depend>models_spawn_library_pkg</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>face_recognition_tc</run_depend>
  <run_depend>person_sim</run_depend>
  <run_depend>models_spawn_library_pkg</run_depend>





  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
